--- a/_static/sass/utilities/_colors.scss
+++ b/_static/sass/utilities/_colors.scss
@@ -10,7 +10,7 @@ $c-offwhite: lighten($c-text, 10);
   --heading-text-color: #333;
   --main-text-color: #4d4d4d;
   --main-theme-color: #2a7af7;
-  --secondary-text-color: #888;
+  --secondary-text-color: #777;
   --lighter-gray-color: #ddd;
   --white-color: #fff;
   --off-white: #f2f2f2; //gets darker in dark mode
